--- a/.choreo/component-config.yaml
+++ b/.choreo/component-config.yaml
@@ -17,4 +17,17 @@ spec:
       # This is mandatory if the endpoint type is set to REST or GraphQL.
       context: /
       schemaFilePath: bff_service_openapi.yaml
+  outbound:
+    serviceReferences:
+    - name: choreo:///techno/owlr/hrvbod/5c69c/v1.0/PUBLIC
+      connectionConfig: 01eeea89-da5c-1d48-bc50-8eb521000b83
+      env:
+      - from: ServiceURL
+        to: SERVICE_URL
+      - from: ConsumerKey
+        to: CLIENT_ID
+      - from: ConsumerSecret
+        to: CLIENT_SECRET
+      - from: TokenURL
+        to: TOKEN_URL
 
